# subwasm-web

./: .gitignore  Cargo.toml  README_src.adoc  index.html  justfile  manifest.json  subwasm-app.js  subwasm-app_bg.wasm
.github/workflows/: pages.yml  rust.yml
assets/: manifest.json
crates/subwasm_app/: Cargo.toml  index.html
crates/subwasm_app/assets/: sw.js
crates/subwasm_app/src/: app.rs  main.rs
crates/subwasm_app_lib/: Cargo.toml
crates/subwasm_app_lib/src/: lib.rs
crates/subwasm_app_lib/src/parts/: about.rs  mod.rs
src/: app.rs  lib.rs  main.rs
